hphp/test/slow/shapes/type_alias_bad_trailing.php.expectf
Fatal error: A comma is required before the ... in a shape type in %s/test/slow/shapes/type_alias_bad_trailing.php on line 9